# TD3

./: .gitattributes  .gitignore  AGENTS.md  PROJECT_HANDOFF.md  PROJECT_LAYOUT.json  README.md  ROADMAP.md  STATUS.md  pyproject.toml
.github/workflows/: test.yml
.research/: deferred_hardening_stage_a.md  design_brief.md  execution_journal.jsonl  execution_state.json
.research/task_reports/: task_0.md  task_1.md  task_4.md  task_5.md  task_6.md  task_6_v2.md
docs/paper/: README.md  manuscript.md  outline.md  related_work.md
docs/project/: public_snapshot_policy.md  repository_structure.md  research_history.md
experiments/: README.md
experiments/circular_tracking/: README.md  __init__.py
experiments/hover_rl_reproduction/: __init__.py
gym-pybullet-drones/: .gitignore  AGENTS.md  PROJECT_HANDOFF.md  PROJECT_STRUCTURE.md  README.md  RL_PAPER_EXECUTION_PLAN.md  pyproject.toml
gym-pybullet-drones/.github/: dependabot.yml
gym-pybullet-drones/.research/: execution_journal.jsonl  execution_state.json
gym-pybullet-drones/assets/: README.md
gym-pybullet-drones/experiments/: README.md
gym_pybullet_drones/control/: BaseControl.py  CTBRControl.py
gym_pybullet_drones/envs/: HoverAviary.py  MultiHoverAviary.py
gym_pybullet_drones/examples/: downwash.py  learn.py  pid.py  pid_velocity.py
gym_pybullet_drones/tasks/: __init__.py
gym_pybullet_drones/utils/: assets.py
reproducibility/: README.md
research_papers/: README.md
tests/: test_asset_paths.py  test_examples.py
tests/project/: test_render_status.py  (+1 more)
tools/: README.md
wt-gpd/: README.md
(+341 files in other folders)
