[tool.poetry]
name = "gym-pybullet-drones"
version = "2.1.0"
description = "PyBullet environments and research tools for the 强化学习 quadrotor control repository"
authors = ["Jacopo Panerati <jacopo.panerati@utoronto.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/magictierwheel/TD3"
packages = [
    { include = "gym_pybullet_drones" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2"
scipy = "^1.15"
transforms3d = "^0.4"
matplotlib = "^3.10"
pybullet = "^3.2.7"
gymnasium = "^1.2"
stable-baselines3 = "^2.8"
control = "^0.10.2"
pytest = "^9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
